# py-project-init

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: init.sh
src/py_project_init/: __init__.py  main.py
tests/: test_main.py
