[project]
name = "py-project-init"
version = "0.1.0"
description = "Modern Python Scaffolding"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0,<10",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.3.0,<1",
    "mypy>=1.8.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_project_init"]

[project.scripts]
start = "py_project_init.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF", "PT", "TCH", "ANN"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["py_project_init"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]
